--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Pokedex</title>
+    <!-- fira sans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <style>
-    .pokemon {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .pokeinfo {
+    .content {
       margin-top: 30px;
-      width: 100%;
       display: flex;
-      justify-content: center;
-      gap: 30px;
-      align-items: center;
-    }
-    .img {
-      width: 400px;
-      object-fit: fill;
-    }
-    .para {
-      font-size: 20px;
     }
     body {
       display: flex;
@@ -33,6 +31,35 @@
       flex-direction: column;
       justify-content: center;
     }
+    a {
+      font-size: 16px;
+      font-family: fira sans;
+      cursor: pointer;
+      color: #2769be;
+    }
+    .Index {
+      margin-top: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 30px;
+    }
+
+    /* Pokedex data */
+    .info-1{
+    display: flex;
+     gap: 20px;
+ }
+ #if1{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 90px;
+  color: #737373;;
+   text-align: right;
+ }
+ #if2{
+  font-family: monospace, monospace;
+  
+ }
   </style>
 
   <body style="display: flex; justify-content: center; flex-direction: column">
@@ -43,17 +70,38 @@
       />
     </div>
     <div>
-      <input type="text" placeholder="Enter Pokemon Name" class="inpt" />
+      
+        <input type="text" placeholder="Enter Pokemon Name" class="inpt"/>
       <button style="cursor: pointer" onclick="FetchPokemon();">
         Fetch Data
       </button>
     </div>
-    <div class="pokeinfo">
-      <div class="pokemon">
-        <div class="pokeimg"></div>
-        <div class="pokename"></div>
+    <h1 class="pokename" style="font-family: inter">Charmander</h1>
+    <div class="Index">
+      <h2 style="font-size: 16px; font-family: fira sans">Content</h2>
+      | <a>Info</a>| <a>Base Stats</a>| <a>Evolution chart</a>|
+      <a>Pokedex Entries</a>|
+      <a>Sprites</a>
+    </div>
+
+    <div class="content">
+      <div class="pokeimg" style="">
+        <img
+          style="width: auto; height: 400px; object-fit: fill"
+          src="Images/charmander.png"
+        />
       </div>
-      <p class="para"></p>
+      <div class="info" style="width: 477px;">
+        <h2 style=" margin-left: 27px; font-family: fira sans">Pokedex Data</h2>
+        <div class="info_text" style="display: flex; flex-direction: column; word-wrap: break-word; gap: 15px;">
+          <span class="info-1"><div id="if1">ID</div><div class="id" id="if2">4</div></span>
+          <span class="info-1"><div id="if1">Type</div><div class="type" id="if2" >Fire</div></span>
+          <span class="info-1"><div id="if1">Height</div><div class="height" id="if2" >0.6m</div></span>
+          <span class="info-1"><div id="if1">Weight</div><div class="weight" id="if2" >10.0kg</div></span>
+          <span class="info-1"><div style="margin-top: 5px;" id="if1">Abilities</div><div class="ability" id="if2" >Blaze <br>SolarPower</div></span>
+          <span class="info-1"><div id="if1">Fun Fact</div><div id="if2" >Fire</div></span>
+  
+      </div>
     </div>
     <script src="poke.js"></script>
   </body>
