--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="pokeimg" style="">
         <img
           style="width: auto; height: 400px; object-fit: fill"
-          src="Images/charmander.png"
+          src="charmander.png"
         />
       </div>
       <div class="info" style="width: 477px;">
