--- a/index.html
+++ b/index.html
@@ -21,7 +21,31 @@
     />
   </head>
   <style>
+    input[type="text"] {
+      padding: 5px;
+      width: 170px;
+      transition: ease-in-out, all 0.35s ease-in-out;
+    }
+    input[type="text"]:focus {
+      outline: none;
+      width: 300px;
+    }
+    .fetch {
+      width: 50px;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      height: 30px;
+      border: none;
+      text-align: center;
+      padding: 5px;
+      margin-left: 5px;
+      box-shadow: 1px 2px 5px gray;
+      font-size: 12px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
     .content {
+      gap: 40px;
       margin-top: 30px;
       display: flex;
     }
@@ -46,23 +70,61 @@
     }
 
     /* Pokedex data */
-    .info-1{
-    display: flex;
-     gap: 20px;
- }
- #if1{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  width: 90px;
-  color: #737373;;
-   text-align: right;
- }
- #if2{
-  font-family: monospace, monospace;
-  
- }
+    .info-1,
+    .info-3 {
+      padding-bottom: 10px;
+      border-bottom: 1px solid #f0f0f0;
+      display: flex;
+      gap: 30px;
+    }
+    #if1 {
+      min-width: 90px;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+
+      width: 90px;
+      color: #737373;
+      text-align: right;
+    }
+    #if2 {
+      font-family: monospace, monospace;
+    }
+    #if3 {
+      min-width: 90px;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      width: 90px;
+      font-size: 14px;
+      color: #737373;
+      text-align: right;
+    }
+    .type {
+      font-weight: normal;
+      font-family: inter;
+      cursor: pointer;
+      background-color: #f42;
+      padding: 4px;
+      width: 66px;
+      text-align: center;
+      font-size: 0.75rem;
+      line-height: 1.5rem;
+      transition: opacity 0.4s;
+      color: #fff;
+      text-transform: uppercase;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+      box-shadow: 1px 1px 5px lightgray;
+      border-radius: 5px;
+    }
   </style>
 
-  <body style="display: flex; justify-content: center; flex-direction: column">
+  <body
+    style="
+      background-image: url('');
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    "
+  >
     <div style="margin-bottom: 30px">
       <img
         style="width: 475px; object-fit: fill"
@@ -70,12 +132,17 @@
       />
     </div>
     <div>
-      
-        <input type="text" placeholder="Enter Pokemon Name" class="inpt"/>
-      <button style="cursor: pointer" onclick="FetchPokemon();">
-        Fetch Data
+      <input
+        spellcheck="false"
+        type="text"
+        placeholder="Enter Pokemon Name"
+        class="inpt"
+      />
+      <button class="fetch" style="cursor: pointer" onclick="FetchPokemon();">
+        Search
       </button>
     </div>
+
     <h1 class="pokename" style="font-family: inter">Charmander</h1>
     <div class="Index">
       <h2 style="font-size: 16px; font-family: fira sans">Content</h2>
@@ -91,18 +158,118 @@
           src="Images/charmander.png"
         />
       </div>
-      <div class="info" style="width: 477px;">
-        <h2 style=" margin-left: 27px; font-family: fira sans">Pokedex Data</h2>
-        <div class="info_text" style="display: flex; flex-direction: column; word-wrap: break-word; gap: 15px;">
-          <span class="info-1"><div id="if1">ID</div><div class="id" id="if2">4</div></span>
-          <span class="info-1"><div id="if1">Type</div><div class="type" id="if2" >Fire</div></span>
-          <span class="info-1"><div id="if1">Height</div><div class="height" id="if2" >0.6m</div></span>
-          <span class="info-1"><div id="if1">Weight</div><div class="weight" id="if2" >10.0kg</div></span>
-          <span class="info-1"><div style="margin-top: 5px;" id="if1">Abilities</div><div class="ability" id="if2" >Blaze <br>SolarPower</div></span>
-          <span class="info-1"><div id="if1">Fun Fact</div><div id="if2" >Fire</div></span>
-  
+      <div class="info" style="width: 395px">
+        <h2 style="margin-left: 27px; font-family: fira sans">Pokedex Data</h2>
+        <div
+          class="info_text"
+          style="
+            display: flex;
+            flex-direction: column;
+            word-wrap: break-word;
+            gap: 15px;
+          "
+        >
+          <span class="info-1"
+            ><div id="if1">ID</div>
+            <div class="id" id="if2">4</div></span
+          >
+          <span class="info-1"
+            ><div
+              style="display: flex; justify-content: end; align-items: center"
+              id="if1"
+            >
+              Type
+            </div>
+            <div class="type" id="if2">Fire</div></span
+          >
+          <span class="info-1"
+            ><div id="if1">Height</div>
+            <div class="height" id="if2">0.6m</div></span
+          >
+          <span class="info-1"
+            ><div id="if1">Weight</div>
+            <div class="weight" id="if2">10.0kg</div></span
+          >
+          <span class="info-1"
+            ><div style="margin-top: 5px" id="if1">Abilities</div>
+            <div class="ability" id="if2">Blaze <br />SolarPower</div></span
+          >
+          <span class="info-1"
+            ><div id="if1">Fun Fact</div>
+            <div id="if2" class="fact">
+              From the time it is born, a flame burns at the tip of its tail.
+              Its life would end if the flame were to go out.
+            </div></span
+          >
+        </div>
+      </div>
+      <div class="info_2" style="width: 395px; margin-left: 60px">
+        <div>
+          <h2 style="margin-left: 27px; font-family: fira sans">Training</h2>
+          <div
+            class="Training"
+            style="
+              display: flex;
+              flex-direction: column;
+              word-wrap: break-word;
+              gap: 15px;
+            "
+          >
+            <span class="info-1"
+              ><div id="if1">EV yield</div>
+              <div class="id" id="if2">3 Sp. Atk</div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Catch rate</div>
+              <div class="height" id="if2">
+                45<span style="font-size: 15px" id="if1"
+                  >(5.9% with PokéBall, full HP)</span
+                >
+              </div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Shape</div>
+              <div class="shape" id="if2">Upright</div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Base Exp.</div>
+              <div class="Experience" id="if2">62</div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Growth Rate</div>
+              <div class="growth_rate" id="if2">Medium Slow</div></span
+            >
+          </div>
+        </div>
+        <div style="margin-top: 70px">
+          <h2 style="margin-left: 27px; font-family: fira sans">Breeding</h2>
+          <div
+            class="Breeding"
+            style="
+              display: flex;
+              flex-direction: column;
+              word-wrap: break-word;
+              gap: 15px;
+            "
+          >
+            <span class="info-1"
+              ><div id="if1">Egg Groups</div>
+              <div class="id" id="if2">Dragon, Monster</div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Gender</div>
+              <div class="weight" id="if2">87.5% male, 12.5%female</div></span
+            >
+            <span class="info-1"
+              ><div id="if1">Egg Cycles</div>
+              <div id="if2">20</div></span
+            >
+          </div>
+        </div>
       </div>
     </div>
+
     <script src="poke.js"></script>
+    <script src="pokedex_data.js"></script>
   </body>
 </html>
